--- a/Mapas/Mapas.csproj
+++ b/Mapas/Mapas.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="GoogleMaps.LocationServices" Version="1.2.0.5" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.59" />
 		<PackageReference Include="Microsoft.Maui.Maps" Version="7.0.59" />
